<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sampley.sampley_fueltrack.AddEntryActivity"
    tools:showIn="@layout/activity_add_entry"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loneText"
            android:text="@string/text_date"/>
        <EditText android:id="@+id/text_enter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFieldBackground"
            android:textColor="@color/textFieldText"
            android:hint="@string/text_enter_date"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loneText"
            android:text="@string/text_station"/>
        <EditText android:id="@+id/text_enter_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFieldBackground"
            android:textColor="@color/textFieldText"
            android:hint="@string/text_enter_station"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loneText"
            android:text="@string/text_amount"/>
        <EditText android:id="@+id/text_enter_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFieldBackground"
            android:textColor="@color/textFieldText"
            android:hint="@string/text_enter_amount"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loneText"
            android:text="@string/text_grade"/>
        <EditText android:id="@+id/text_enter_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFieldBackground"
            android:textColor="@color/textFieldText"
            android:hint="@string/text_enter_grade"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loneText"
            android:text="@string/text_cost"/>
        <EditText android:id="@+id/text_enter_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textFieldBackground"
            android:textColor="@color/textFieldText"
            android:hint="@string/text_enter_cost"/>
    </LinearLayout>

    <Button android:id="@+id/button_save_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_entry"/>

</LinearLayout>
